--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "adm-zip": "0.4.7",
     "del": "1.1.1",
     "gulp": "3.9.0",
+    "gulp-lock": "0.0.3",
     "gulp-mocha": "2.1.3",
     "gulp-typescript": "2.13.0",
+    "gulp-unzip": "0.1.4",
     "gulp-util": "3.0.4",
     "gulp-zip": "3.2.0",
-    "gulp-unzip": "0.1.4",
     "minimatch": "3.0.2",
     "minimist": "1.1.1",
     "mocha": "2.3.3",
